# crawler

./: .gitignore  README.md  crawled_titles.txt  main.py  pyproject.toml  模版.xlsx
firms/: notes.md
firms/docs/: DataToCollect.docx  developer_sample1.xls  publisher_sample1.xls
jingan/: .txt  Jingan.py  crawled_titles_final.txt  jingan_fix.py  news_simple_crawl.py  模版.xlsx
minhang/: Minhang.py  main.py  note.md  模版.xlsx
shenzhen/: 251115_ SH+SZ Crawled Data File.xlsx  251115_SH_SZ_Crawled_Data_Fixed.xlsx  Shenzhen_diantijianshe.py  main.py  note.md
sshuangpu/: crawled_titles_api.txt  main.py  模版.xlsx
