[project]
name = "crawl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "addressparser>=0.2.4",
    "beautifulsoup4>=4.14.2",
    "lxml-html-clean>=0.4.3",
    "lxml[html-clean]>=6.0.2",
    "newspaper3k>=0.2.8",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scrapy>=2.13.3",
]
